--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head><link href="./css/index.css" rel="stylesheet" type="text/css"/></head><body><header> 
-SITW membership</header><main id="membership"></main><footer></footer><script src="./js/zepto.min.js"></script><script src="./js/handlebars.js"></script><script id="entry-template" type="text/x-handlebars-template"><section>
+SITW membership<img src="./logo/sitw-logo-03.png"/></header><main id="membership"></main><footer></footer><script src="./js/zepto.min.js"></script><script src="./js/handlebars.js"></script><script id="entry-template" type="text/x-handlebars-template"><section>
     <div class="picture">
         <img src="http://avatars.io/facebook/{{facebook-id}}?size=large" width="200">
     </div>
@@ -55,6 +55,7 @@ SITW membership</header><main id="membership"></main><footer></footer><script sr
             };
     })
 })
+
 
 
 </script></body></html>
