Fix the top menu, and add the school selection in member.json

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 School
             </div>
             <div class='word2'>
-                NCKU {{department}} {{class}}
+                {{school}} {{department}} {{class}}
             </div>
-        </li>
+        </li>   
         <li>
             <div class='word1'>
                 Skill
