--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Copyright &copy 2013 SITW All Rights Reserved.</footer><script src="./js/zepto.m
         </li>
         <li>
             <div class='word1'>
-                <span class='word1-1'>Desctiption</span>
+                <span class='word1-1'>Description</span>
             </div>
             <div class='word2'>
                 {{description}}
